--- a/.cproject
+++ b/.cproject
@@ -189,4 +189,5 @@
 			<resource resourceType="PROJECT" workspacePath="/KoNaR_final_project"/>
 		</configuration>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
